[package]
name = "mos6502"
version = "0.1.0"
authors = ["Pedro <pedrostarling2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies.log]
version = "0.4.22"
optional = true

[features]
logging  =["dep:log"]