[package]
name = "mos6502"
version = "0.1.0"
authors = ["Pedro <pedrostarling2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies.simple_logger]
version = "5.0.0"
optional = true

[dependencies.log]
version = "0.4.27"
optional = true

[dev-dependencies]
serde = "1.0.228"
serde_json = "1.0.145"

[features]
default = ["logging"]
std = []
logging = ["dep:log", "dep:simple_logger"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }